2000-11-18  Braden McDaniel  <braden@endoframe.com>

        * Backported the patch to Mozilla bug 24892.  We should nolonger need
          special CFLAGS to compile JavaScript under Red Hat 7.0. This fixes
          <http://sourceforge.net/bugs/?func=detailbug&bug_id=122654&group_id=7151>

2000-11-17  Braden McDaniel  <braden@endoframe.com>

        * Made the parser, scanner, and ANTLR headers non-public.

        * Upgraded JavaScript to 1.5RC2.

        * Added another tryURLs method to Image:
          
            bool tryURLs(const VrmlMFString & urls, Doc2 * relative = 0);
          
          This was needed as there is currently no reliable way to get the
          char** to the 2D array of strings out of VrmlMFString.  This fixes
          <http://sourceforge.net/bugs/?func=detailbug&bug_id=116908&group_id=7151>.

        * Cleaned up warnings in VrmlNodeAnchor.cpp.

        * In the parser, the value passed to VrmlMFColor for the number of color
          values was off by 1/3. This fixes
          <http://sourceforge.net/bugs/?func=detailbug&bug_id=122340&group_id=7151>

2000-11-16  S. K. Bose <bose@pavan.barc.ernet.in>
        
        * Changes in Makefile.win to include conditional generation
          of C++ code from ANTLR grammar by having java or not.

2000-11-07  Braden McDaniel  <braden@endoframe.com>

        * Took the ANTLR source out of the automated build.

2000-11-03  Braden McDaniel  <braden@endoframe.com>

        * Changed the character variables in the Vrml97Utf8Scanner from char to
          int, since char_traits<T>::eof is an int_type, and EOF is typically
          an int.

2000-10-26  Braden McDaniel  <braden@endoframe.com>

        * Modified ANTLR's config.cpp to define NO_STATIC_CONSTS for gcc 2.96.
          This fixes <http://sourceforge.net/bugs/?func=detailbug&bug_id=117652&group_id=7151>.
        
        * In configure.in, disabled the ability to disable building static